mettags and images

--- a/index.html
+++ b/index.html
@@ -4,14 +4,61 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.ico" />
+    <title>Nightly - Your Daily Guide to Crypto Currency Charts</title>
+    <meta
+      name="description"
+      content="Nightly provides daily charts and analysis for crypto currency enthusiasts. Stay up-to-date with the latest trends and developments in the crypto world."
+    />
+    <meta
+      name="keywords"
+      content="crypto currency, charts, analysis, trends, Bitcoin, Ethereum, Dogecoin, Litecoin, Ripple, blockchain"
+    />
+    <meta name="author" content="Michal Nowotnik" />
+    <meta name="robots" content="index, follow" />
+    <meta
+      name="canonical"
+      href="https://nightly-solidjs-9mwroky24-novyapp.vercel.app/"
+    />
+
+    <!-- OG (Open Graph) tags -->
+    <meta
+      property="og:title"
+      content="Nightly - Your Daily Guide to Crypto Currency Charts"
+    />
+    <meta
+      property="og:description"
+      content="Stay up-to-date with the latest trends and developments in the crypto world with Nightly's daily charts and analysis."
+    />
+    <meta property="og:image" content="/preview.png" />
+    <meta
+      property="og:url"
+      content="https://nightly-solidjs-9mwroky24-novyapp.vercel.app/"
+    />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card tags -->
+    <meta
+      name="twitter:title"
+      content="Nightly - Your Daily Guide to Crypto Currency Charts"
+    />
+    <meta
+      name="twitter:description"
+      content="Stay up-to-date with the latest trends and developments in the crypto world with Nightly's daily charts and analysis."
+    />
+    <meta name="twitter:image" content="/preview.png" />
+    <meta
+      name="twitter:url"
+      content="https://nightly-solidjs-9mwroky24-novyapp.vercel.app/"
+    />
+    <meta name="twitter:card" content="summary_large_image" />
+
+    <link rel="shortcut icon" type="image/ico" href="favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
-    <title>Solid App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
